--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
 }
 
 .form h1 {
-  font-family: "Fredoka One", cursive;
+  font-family: "Mulish", sans-serif, cursive;
   text-align: center;
 }
 
