--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 body {
   height: 100vh;
   display: flex;
@@ -5,7 +6,12 @@ body {
   align-items: center;
   margin: 0;
   background-color: #f9f5ec;
+  background-image: url('/img/background.jpg');
+  background-size: cover;
+  font-family: "Mulish", sans-serif;
+
 }
+
 
 .container {
   display: flex;
@@ -14,10 +20,18 @@ body {
   background-color: white;
 }
 
+.icon {
+  display: flex;
+  width: 45%;
+  flex-direction: column;
+}
+
 .icon img {
   width: 100%;
   border-radius: 10px 0 0 10px;
   height: 100%;
+  font-family: "Mulish", sans-serif;
+  padding: 0;
 }
 
 .form {
@@ -88,4 +102,61 @@ input {
   transition: border-color 0.2s ease;
   font-size: 16px;
   line-height: 24px;
+}
+
+/* .blur {
+  filter: blur(10px);
+  backdrop-filter: blur(10px);
+} */
+
+.popup-container {
+  z-index: 99999;
+  position: fixed;
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(10px);
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  visibility: hidden;
+}
+
+.popup-box {
+  position: relative  ;
+  background: rgba(255, 255, 255, 0.9);
+  width: 750px;
+  height: 450px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  border: 2px solid black;
+  border-radius: 20px;
+}
+
+.popup-box > h2 {
+  text-align: center;
+  padding: 1.5rem
+}
+
+.popup-box > h4 {
+  text-align: center;
+  padding: 0 1.5rem 0 1.5rem;
+  margin-bottom: 0;
+  margin-top: 50px;
+}
+
+.popup-box .countdown {
+  padding: 0rem;
+  font-size: 3rem;
+  margin-top: 20px;
+}
+
+.button #popUpBtn {
+  width: 100px;
+  font-size: 1rem;
+}
+
+.active {
+  visibility: visible;
 }
