--- a/style.css
+++ b/style.css
@@ -89,3 +89,33 @@ input {
   font-size: 16px;
   line-height: 24px;
 }
+
+#failed{
+  color: white;
+  font-family: "Mulish", sans-serif;
+  text-align: center;
+  position:absolute;
+  z-index: 50;
+  font-size: 40px;
+  background-color: #229bd8;
+  padding: 100px;
+  display: flex;
+  width: 25%;
+  border: 2px solid#ffffe6;
+  border-radius: 5px
+}
+
+#okayButton{
+  border: 2px solid#ffffe6;
+  color: #002266;
+  font-family: "Mulish", sans-serif;
+  border-radius: 8px;
+  text-align: center;
+  position:absolute;
+  z-index: 51;
+  font-size: 30px;
+  background-color: #cceeff;
+  padding: 10px;
+  margin-top: 25%;
+  display: flex
+}
