--- a/style.css
+++ b/style.css
@@ -174,9 +174,14 @@ input {
   margin-top: 20px;
 }
 
+.popup-box > .button {
+  margin-top: 0;
+}
+
 .button #popUpBtn {
   width: 100px;
   font-size: 1rem;
+
 }
 
 .active{
@@ -185,4 +190,45 @@ input {
 
 .input-popup {
   color: #229bd8;
+}
+
+.time {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	margin: 15px;
+}
+
+ .time h2 {
+	font-weight: bold;
+	font-size: 30px;
+	line-height: 1;
+	margin: 0 0 0px;
+}
+
+@media (max-width: 300px) {
+
+	h1 {
+		font-size: 30px;
+	}
+
+	.time {
+		margin: 5px;
+	}
+
+	.time h2 {
+		font-size: 20px;
+	}
+
+	.time small {
+		font-size: 20px;
+	}
+}
+
+.countdown {
+	display: flex;
+	transform: scale(1);
+  font-weight: normal;
+	font-size: 15px;
 }
