--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 30px;
+  margin-bottom: 20px;
 }
 
 .button button {
@@ -184,10 +184,6 @@ input {
 
 }
 
-.active{
-  visibility: visible;
-}
-
 .input-popup {
   color: #229bd8;
 }
@@ -233,6 +229,6 @@ input {
 	font-size: 15px;
 }
 
-.dropdown-item-kel {
-  padding-left: 1rem;
+.active{
+  visibility: visible;
 }
