--- a/style2.css
+++ b/style2.css
@@ -159,3 +159,112 @@ input {
   color: white;
   background-color: #229bd8;
 }
+
+.failed-form {
+    color: red;
+    margin-bottom: 10px;
+    visibility: hidden;
+    font-size: 0.8rem;
+}
+
+.popup-container {
+  font-family: "Mulish", sans-serif;
+  z-index: 99999;
+  position: fixed;
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(10px);
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  visibility: hidden;
+}
+
+.popup-box {
+  position: relative  ;
+  background: rgba(255, 255, 255, 0.9);
+  width: 750px;
+  height: 500px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  border: 2px solid black;
+  border-radius: 20px;
+}
+
+.popup-box > h2 {
+  text-align: center;
+  padding: 1.5rem
+}
+
+.popup-box > h4 {
+  text-align: center;
+  padding: 0 1.5rem 0 1.5rem;
+  margin-bottom: 0;
+  margin-top: 50px;
+}
+
+.popup-box .countdown {
+  padding: 0rem;
+  font-size: 3rem;
+  margin-top: 20px;
+}
+
+.popup-box > .button {
+  margin-top: 0;
+}
+
+.button #popUpBtn {
+  width: 100px;
+  font-size: 1rem;
+}
+
+.input-popup {
+  color: #229bd8;
+}
+
+.time {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	margin: 15px;
+}
+
+ .time h2 {
+	font-weight: bold;
+	font-size: 30px;
+	line-height: 1;
+	margin: 0 0 0px;
+}
+
+@media (max-width: 300px) {
+
+	h1 {
+		font-size: 30px;
+	}
+
+	.time {
+		margin: 5px;
+	}
+
+	.time h2 {
+		font-size: 20px;
+	}
+
+	.time small {
+		font-size: 20px;
+	}
+}
+
+.countdown {
+	display: flex;
+	transform: scale(1);
+  font-weight: normal;
+	font-size: 15px;
+}
+
+.active{
+  visibility: visible;
+}
