--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ input {
   display: flex;
   align-items: center;
   flex-direction: column;
-  border: 2px solid black;
+  border: 3px solid rgb(34, 155, 216, 0.08);
   border-radius: 20px;
 }
 
