--- a/style2.css
+++ b/style2.css
@@ -189,8 +189,9 @@ input {
   display: flex;
   align-items: center;
   flex-direction: column;
-  border: 2px solid black;
   border-radius: 20px;
+  box-shadow: 0 5px rgb(0, 0, 0 / 20%);
+  border: 3px solid rgb(34, 155, 216, 0.08);
 }
 
 .popup-box > h2 {
